# simple-rust-apps

./: README.md
calculator_app/: README.md
calculator_app/src/: main.rs
desktop-application/: Cargo.toml  README.md  sys_config
desktop-application/src/: main.rs
simple_blog/: .env  Cargo.toml
simple_blog/src/: db.rs  main.rs
